--- a/configs/WRLinux9/WRLinux-9-Base_qemux86-64_glibc-small_Base.yaml
+++ b/configs/WRLinux9/WRLinux-9-Base_qemux86-64_glibc-small_Base.yaml
@@ -66,10 +66,10 @@ layerindex_overrides:
     branch: WRLINUX_9_BASE
     # Specify the layer vcs_url to used with a Devbuild. If not specified the 
     # vcs_url will not be changed.
-    layer_vcs_url: git://git.wrs.com/layers/wr-fixes
+    layer_vcs_url: https://github.com/WindRiver-Labs/wr-fixes
     # Specify the branch to be used with on the modified layer for a Devbuild.
     # Defaults to branch used for build.
-    layer_actual_branch: WRLINUX_9_BASE_RCPL0014
+    layer_actual_branch: wr-9.0-20171109
     # Specify the subdir of a repository in which to find the layer.
     layer_vcs_subdir:
 
