--- a/configs/OpenEmbedded/combos-master.yaml
+++ b/configs/OpenEmbedded/combos-master.yaml
@@ -4,8 +4,8 @@
   - core-image-minimal
   name: master-minimal
   prebuild:
-  - notconfigure.sh
-  - --enable-shared-sstate=yes
+  - build_configure.sh
+  - --enable-shared-sstate=oecore_sstate
   - --enable-bootimage=ext4
   setup:
   - wr-lx-setup.sh
