--- a/configs/OpenEmbedded/jenkins_job_configs.yaml
+++ b/configs/OpenEmbedded/jenkins_job_configs.yaml
@@ -20,11 +20,11 @@
 
 system:
   # Jenkins master endpoint.
-  jenkins: https://yow-lpdtest.wrs.com
+  jenkins: https://ala-blade21.wrs.com
   # Jenkins Job name.
   # Default: WRLinux_Build
   job: WRLinux_Build
-  # The Docker registry to pull images from. 
+  # The Docker registry to pull images from.
   # Default: windriver
   registry: windriver
   # Specify the file path for jenkins authentication infomation
@@ -35,12 +35,12 @@ system:
   # Specify the credential id when git_credential is enabled.
   # Default: git
   git_credential_id: git
-  # The network switch for network access. Only three options allowed: 
+  # The network switch for network access. Only three options allowed:
   # Default: bridge (with network access) or
   # overlay (docker swarm mode) or
   # none (without network).
   network: bridge
-  # The switch for using toaster in build. Only two options allowed: 
+  # The switch for using toaster in build. Only two options allowed:
   # enable (with toaster) and disable (without toaster).
   # Default: enable.
   toaster: enable
@@ -48,123 +48,156 @@ system:
 ci_config:
   # The branch to use for the ci-scripts repo. Used for local modifications.
   # Default: master
-  ci_branch: devbuild
+  ci_branch: master
   # The location of the ci-scripts repo. Override to use local mirror.
   # Default: https://github.com/WindRiver-OpenSourceLabs/ci-scripts.git
-  ci_repo: git://ala-git.wrs.com/projects/wrlinux-ci/ci-scripts.git
+  ci_repo: https://github.com/WindRiver-OpenSourceLabs/ci-scripts.git
 
 cache_sources:
   # Specify a remote for the wrlinux_update.sh script to clone or update from.
   # Default: ''
-  remote: 
+  remote:
 
 layerindex_overrides:
   # Specify a layer name to be modified as part of a Devbuild.
-  - layer_name: wr-fixes
+  - layer_name:
     # Override the branch defined in the combos file.
     # Default: the same as 'branch' set in 'build' section
-    branch: WRLINUX_9_BASE
-    # Specify the layer vcs_url to used with a Devbuild. If not specified the 
+    branch: WRLINUX_10_17_LTS
+    # Specify the layer vcs_url to used with a Devbuild. If not specified the
     # vcs_url will not be changed.
-    layer_vcs_url: git://git.wrs.com/layers/wr-fixes
+    layer_vcs_url: git://git.wrs.com/layers/wr-bsps/nxp-imx7
     # Specify the branch to be used with on the modified layer for a Devbuild.
     # Defaults to branch used for build.
-    layer_actual_branch: WRLINUX_9_BASE_RCPL0014
+    layer_actual_branch: WRLINUX_10_17_LTS_RCPL0004
     # Specify the subdir of a repository in which to find the layer.
     layer_vcs_subdir:
 
   # Specify a layer name to be modified as part of a Devbuild.
-  - layer_name: meta-perl
+  - layer_name:
     # Override the branch defined in the combos file.
     # Default: the same as 'branch' set in 'build' section
-    branch: WRLINUX_9_BASE
-    # Specify the layer vcs_url to used with a Devbuild. If not specified the 
+    branch: WRLINUX_10_17_LTS
+    # Specify the layer vcs_url to used with a Devbuild. If not specified the
     # vcs_url will not be changed.
-    layer_vcs_url: git://git.wrs.com/layers/meta-openembedded
+    layer_vcs_url: git://git.wrs.com/layers/wr-bsps/intel-x86
     # Specify the branch to be used with on the modified layer for a Devbuild.
     # Defaults to branch used for build.
-    layer_actual_branch: WRLINUX_9_BASE_RCPL0014
+    layer_actual_branch: WRLINUX_10_17_LTS_RCPL0004
     # Specify the subdir of a repository in which to find the layer.
     layer_vcs_subdir:
 
 build:
-  # The Docker image used for the build. 
+  # The Docker image used for the build.
   # Default: ubuntu1604_64.
   image: ubuntu1604_64
   # Name of file that contains valid build configurations.
-  build_configs_file: configs/WRLinux9/combos-WRLINUX_9_BASE.yaml
+  build_configs_file: configs/OpenEmbedded/combos-pyro.yaml
   # Override the branch defined in the combos file.
   # Default: ''
-  branch: WRLINUX_9_BASE
-  # builds as specified in config_file. Use all to queue
+  branch: pyro
+  # builds as specified in build_configs_file. Use all to queue
   # all the configs.
   build_configs:
-    - intel-x86-64_wrlinux-image-glibc-std
+    - pyro-sato
+  # Specify the layer index type
+  # Default: restapi-web
+  # Set to restapi-files if populate it with a cached mirror-index
+  layerindex_type: restapi-web
   # Specify the source URL of layer index
   # Default: https://layers.openembedded.org/layerindex/api/
-  layerindex_source: http://layers.wrs.com/layerindex/api/
+  layerindex_source: https://layers.openembedded.org/layerindex/api/
   # Specify the URL of bitbake repo
   # Default: git://git.openembedded.org/bitbake
-  bitbake_repo_url: git://ala-git.wrs.com/bitbake
+  bitbake_repo_url: git://git.openembedded.org/bitbake
 
 post_build:
   # The Docker image used for the post process stage.
   # Default: postbuild
   post_process_image: postbuild
-  # list of args in form KEY: VAL that will be injected into 
+  # list of args in form KEY: VAL that will be injected into
   # post process script environment.
   # Default: ''
   postprocess_args:
-    RSYNC_SERVER: yow-lpdtest.wrs.com
-    RSYNC_DEST_DIR: builds/wrlinux9
-    SMTPSERVER: prod-webmail.windriver.com
-    OE_TEST: yes
+    RSYNC_SERVER: 
+    RSYNC_DEST_DIR: 
+    # HTTP_ROOT is used to get test images, it's related to RSYNC server
+    HTTP_ROOT: 
+    SMTPSERVER: 
+    REPORT_SERVER: 
     #- EMAIL: 'user1@windriver.com user2@xxx.com'
-    EMAIL: yang.wang@windriver.com
+    EMAIL: 
   # list of scripts in the scripts/ directory to be run after
-  # a successful build. 
+  # a successful build.
   # Default: rsync,cleanup.
   post_success:
     - rsync
     - cleanup
   # list of scripts in the scripts/ directory to be run after
-  # a failed build. 
+  # a failed build.
   # Default: cleanup,send_email
   post_fail:
     - rsync
     - cleanup
     - send_mail
+    - report
 
 test_config:
-  # Switch to enable runtime testing of the build. Only two options supported: 
-  # enable (run tests) or disable. 
+  # Switch to enable runtime testing of the build. Available options are:
+  # test suilte name (means test is enabled) or disable.
   # Default: disable
-  test: enable
-  # The Docker image used for the test stage. 
+  # ================
+  # Supported tests and matching devices
+  # LAVA test reference: https://git.linaro.org/qa/test-definitions.git
+  #
+  # test                            | supported devices
+  # --------------------------------+--------------------
+  # oeqa-default-test (default)     | simics
+  #                                 | x86_64_device
+  #                                 | intel_skylake_32_device
+  #                                 | intel_skylake_64_device
+  #                                 | intel_skylake_avx512_64_device
+  #                                 | nxp_ls20xx_device
+  # linaro-smoke-test               | simics
+  #                                 | x86_64_device
+  #                                 | intel_skylake_avx512_64_device
+  #                                 | nxp_ls20xx_device
+  # linaro-busybox-test             | simics or hardware
+  # linaro-signal-test              | simics or hardware
+  # linaro-singlenode-advanced-test | simics or hardware
+  # linaro-pi-stress-test           | hardware
+  # linaro-pmq-test                 | hardware
+  # linaro-rt-migrate-test          | hardware
+  #
+  test: disable
+  # Name of file that contains test configurations.
+  test_configs_file: configs/WRLinux10/test_configs.yaml
+  # The Docker image used for the test stage.
   # Default: postbuild
   test_image: postbuild
-  # list of args in form KEY: VAL that will be injected into 
+  # list of args in form KEY: VAL that will be injected into
   # test and post test script environment.
-  test_args: 
+  test_args:
     LAVA_SERVER: yow-lpdtest.wrs.com:8080
     LAVA_USER: lpdtest
+    # NFS_ROOT is used to get target images (kernel and rootfs) for testing
     NFS_ROOT: /net/yow-lpdtest/var/lib/tftpboot
-    HTTP_ROOT: http://128.224.56.215/tftpboot
     TEST_DEVICE: simics
-    TEST_SUITE: oeqa-default-test
     RETRY: 1
 
 post_test:
-  # The Docker image used for the post test stage. 
+  # The Docker image used for the post test stage.
   # Default: postbuild
   post_test_image: postbuild
   # list of scripts in the scripts/ directory to be run after
-  # a successful test. 
+  # a successful test.
   # Default: none
   post_test_success:
-    - send_mail
+    #- send_mail
+    - report
   # list of scripts in the scripts/ directory to be run after
-  # a successful test. 
+  # a successful test.
   # Default: none
   post_test_fail:
     - send_mail
+    - report
