--- a/configs/WRLinux10/combos-WRLINUX_10_BASE.yaml
+++ b/configs/WRLinux10/combos-WRLINUX_10_BASE.yaml
@@ -1,28 +1,172 @@
 - branch: WRLINUX_10_17_LTS
   build:
-  - 'bitbake wrlinux-image-glibc-std ; bitbake wrlinux-image-glibc-std -c testexport'
+  - 'bitbake wrlinux-image-glibc-std'
   name: intel-x86-64_wrlinux-image-glibc-std
   prebuild:
-  - notconfigure.sh
-  - --oe-test=with_wrlinux10
+  - build_configure.sh
   - --enable-shared-sstate=wrl10_sstate_cache
-  - --test-suites=ping,ssh,df,connman,syslog,xorg,scp,vnc,date,pam,perl,python,rpm,ldd,smart,dmesg
   setup:
   - --distro=wrlinux
   - --machine=intel-x86-64
   - --dl-layers
   - --accept-eula=yes
-- branch: WRLinux-lts-17-Base
+
+- branch: WRLINUX_10_17_LTS
   build:
-  - bitbake
-  - wrlinux-image-glibc-small
-  name: qemux86-64_glibc-small_Base
+  - 'bitbake wrlinux-image-glibc-std'
+  name: intel-x86-32_wrlinux-image-glibc-std
   prebuild:
-  - notconfigure.sh
-  - --test-image=yes
-  - --enable-bootimage=ext4
-  - --no-network=0
-  - --premirror_path=/home/wrlbuild/premirror-master-wr
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
   setup:
-  - --distro=wrlinux-small
+  - --distro=wrlinux
+  - --machine=intel-x86-32
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: intel-skylake-32_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=intel-skylake-32
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: intel-skylake-64_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=intel-skylake-64
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: intel-skylake-avx512-32_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=intel-skylake-avx512-32
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: intel-skylake-avx512-64_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=intel-skylake-avx512-64
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: nxp-imx7_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-bootimage=ext4
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=nxp-imx7
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: nxp-ls20xx_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=nxp-ls20xx
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: nxp-ls10xx_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=nxp-ls10xx
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: xilinx-zynqmp_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-bootimage=ext4
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=xilinx-zynqmp
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: qemuarma9_wrlinux_image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=qemuarma9
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: qemuarm64_wrlinux_image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=qemuarm64
+  - --dl-layers
+  - --accept-eula=yes
+
+- branch: WRLINUX_10_17_LTS
+  build:
+  - 'bitbake wrlinux-image-glibc-std'
+  name: qemux86-64_wrlinux_image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-bootimage=ext4
+  - --enable-shared-sstate=wrl10_sstate_cache
+  setup:
+  - --distro=wrlinux
   - --machine=qemux86-64
+  - --dl-layers
+  - --accept-eula=yes
+  - --templates=feature/ptest
