--- a/configs/WRLinux9/combos-WRLINUX_9_BASE.yaml
+++ b/configs/WRLinux9/combos-WRLINUX_9_BASE.yaml
@@ -1,23 +1,34 @@
 - branch: WRLINUX_9_BASE
   build:
-  - 'bitbake wrlinux-image-glibc-std ; bitbake wrlinux-image-glibc-std -c testexport'
+  - bitbake
+  - wrlinux-image-glibc-std
   name: intel-x86-64_wrlinux-image-glibc-std
   prebuild:
-  - notconfigure.sh
-  - --oe-test=with_wrlinux9
+  - build_configure.sh
   - --enable-shared-sstate=wrl9_sstate_cache
-  - --test-suites=ping,ssh,df,date,scp,pam,perl,python
   setup:
   - --distro=wrlinux
   - --machine=intel-x86-64
   - --dl-layers
+- branch: WRLINUX_9_BASE
+  build:
+  - bitbake
+  - wrlinux-image-glibc-std
+  name: qemux86-64_wrlinux-image-glibc-std
+  prebuild:
+  - build_configure.sh
+  - --enable-bootimage=ext4
+  - --enable-shared-sstate=wrl9_sstate_cache
+  setup:
+  - --distro=wrlinux
+  - --machine=qemux86-64
 - branch: WRLinux-9-Base
   build:
   - bitbake
   - wrlinux-image-glibc-small
   name: qemuarm_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -28,7 +39,7 @@
   - wrlinux-image-glibc-small
   name: qemuppc_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -39,7 +50,7 @@
   - wrlinux-image-glibc-small
   name: qemumips64_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -50,7 +61,7 @@
   - wrlinux-image-glibc-small
   name: qemumips_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -61,9 +72,9 @@
   - wrlinux-image-glibc-small
   name: qemux86-64_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
-  - --enable-shared-sstate=yes
+  - --enable-shared-sstate=wrl9_sstate_cache
   setup:
   - --distro=wrlinux-small
   - --machine=qemux86-64
@@ -73,7 +84,7 @@
   - wrlinux-image-glibc-small
   name: qemuarma9_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -84,7 +95,7 @@
   - wrlinux-image-glibc-small
   name: qemuarm64_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -95,7 +106,7 @@
   - wrlinux-image-glibc-small
   name: qemux86_glibc-small_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -106,7 +117,7 @@
   - wrlinux-image-glibc-core
   name: qemuarm_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -117,7 +128,7 @@
   - wrlinux-image-glibc-std
   name: qemuarm_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -128,7 +139,7 @@
   - wrlinux-image-glibc-core
   name: qemuppc_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -139,7 +150,7 @@
   - wrlinux-image-glibc-std
   name: qemuppc_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -150,7 +161,7 @@
   - wrlinux-image-glibc-core
   name: qemumips64_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -161,7 +172,7 @@
   - wrlinux-image-glibc-std
   name: qemumips64_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -172,7 +183,7 @@
   - wrlinux-image-glibc-core
   name: qemumips_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -183,7 +194,7 @@
   - wrlinux-image-glibc-std
   name: qemumips_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -194,7 +205,7 @@
   - wrlinux-image-glibc-core
   name: qemux86-64_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -205,7 +216,7 @@
   - wrlinux-image-glibc-std
   name: qemux86-64_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -216,7 +227,7 @@
   - wrlinux-image-glibc-core
   name: qemuarma9_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -227,7 +238,7 @@
   - wrlinux-image-glibc-std
   name: qemuarma9_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -238,7 +249,7 @@
   - wrlinux-image-glibc-core
   name: qemuarm64_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -249,7 +260,7 @@
   - wrlinux-image-glibc-std
   name: qemuarm64_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -260,7 +271,7 @@
   - wrlinux-image-glibc-core
   name: qemux86_glibc-core_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -271,7 +282,7 @@
   - wrlinux-image-glibc-std
   name: qemux86_glibc-std_Base
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
