--- a/configs/OpenEmbedded/jenkins_job_configs.yaml
+++ b/configs/OpenEmbedded/jenkins_job_configs.yaml
@@ -51,7 +51,7 @@ ci_config:
   ci_branch: master
   # The location of the ci-scripts repo. Override to use local mirror.
   # Default: https://github.com/WindRiver-OpenSourceLabs/ci-scripts.git
-  ci_repo: https://github.com/WindRiver-OpenSourceLabs/ci-scripts.git
+  ci_repo: https://github.com/ywangwrs/ci-scripts.git
 
 cache_sources:
   # Specify a remote for the wrlinux_update.sh script to clone or update from.
@@ -169,21 +169,21 @@ test_config:
   # linaro-pmq-test                 | hardware
   # linaro-rt-migrate-test          | hardware
   #
-  test: disable
+  test: linaro-smoke-test
   # Name of file that contains test configurations.
-  test_configs_file: configs/WRLinux10/test_configs.yaml
+  test_configs_file: configs/OpenEmbedded/test_configs.yaml
   # The Docker image used for the test stage.
   # Default: postbuild
   test_image: postbuild
   # list of args in form KEY: VAL that will be injected into
   # test and post test script environment.
   test_args:
-    LAVA_SERVER: yow-lpdtest.wrs.com:8080
+    LAVA_SERVER: 54.188.58.171
     LAVA_USER: lpdtest
     # NFS_ROOT is used to get target images (kernel and rootfs) for testing
-    NFS_ROOT: /net/yow-lpdtest/var/lib/tftpboot
-    TEST_DEVICE: simics
-    RETRY: 1
+    NFS_ROOT: /opt/rsync
+    TEST_DEVICE: aws-ec2_qemu-x86_64
+    RETRY: 0
 
 post_test:
   # The Docker image used for the post test stage.
