Add default settings of HTTP_ROOT and RSYNC_DIR

--- a/configs/OpenEmbedded/jenkins_job_configs.yaml
+++ b/configs/OpenEmbedded/jenkins_job_configs.yaml
@@ -120,9 +120,9 @@ post_build:
   # Default: ''
   postprocess_args:
     RSYNC_SERVER: 
-    RSYNC_DEST_DIR: 
+    RSYNC_DEST_DIR: ./
     # HTTP_ROOT is used to get test images, it's related to RSYNC server
-    HTTP_ROOT: 
+    HTTP_ROOT: http://35.166.221.145/builds
     SMTPSERVER: 
     REPORT_SERVER: 
     #- EMAIL: 'user1@windriver.com user2@xxx.com'
