--- a/wrl-ci.yaml
+++ b/wrl-ci.yaml
@@ -85,7 +85,7 @@ services:
       # Volume avoids recreating certs on every run
       - rproxy_nginx_config:/etc/nginx/keys
       # expose the rsync server contents over https
-      - /opt/rsync:/var/lib/nginx/html/builds/:ro
+      - /opt/rsync/builds:/var/lib/nginx/html/builds/:ro
       # expose the jenkins auth content over https
       - jenkins_home:/var/lib/nginx/html/jenkins_home/:ro
 
@@ -170,7 +170,7 @@ services:
     networks:
       - rsync_net
     volumes:
-      - /opt/rsync:/builds
+      - /opt/rsync/builds:/builds
 
 volumes:
   jenkins_home:
