add remote device in test_configs.yaml

--- a/configs/WRLinux10/test_configs.yaml
+++ b/configs/WRLinux10/test_configs.yaml
@@ -168,6 +168,9 @@
   aws-ec2_qemu-x86_64:
     job_template: lava-test/jobs/templates/OpenEmbedded/x86_64_qemu_job_lava-smoke-test_template.yaml
     timeout: 300
+  remote:
+    job_template: lava-test/jobs/templates/wrlinux-10/x86_64_job_linaro-smoke-test_template.yaml
+    timeout: 300
   simics:
     job_template: lava-test/jobs/templates/wrlinux-10/x86_simics_job_linaro-smoke-test_template.yaml
     timeout: 300
