--- a/configs/WRLinux10/test_configs.yaml
+++ b/configs/WRLinux10/test_configs.yaml
@@ -12,6 +12,9 @@
   - TEST_SERVER_IP = "localhost"
   - TEST_SUITES = "ping ssh df connman syslog xorg scp vnc date pam perl python rpm ldd smart dmesg dash"
   lava_test_repo: git://ala-lxgit.wrs.com/lpd-ops/lava-test.git
+  remote:
+    job_template: lava-test/jobs/templates/wrlinux-10/x86_64_job_oeqa-default-test_template.yaml
+    timeout: 600
   simics:
     job_template: lava-test/jobs/templates/wrlinux-10/x86_simics_job_oeqa-default-test_template.yaml
     timeout: 420
